[gd_scene load_steps=3 format=3 uid="uid://7u1t5lj73shm"]

[ext_resource type="Script" path="res://game.gd" id="1_vjs00"]
[ext_resource type="PackedScene" uid="uid://s5uj50u6rb05" path="res://hud.tscn" id="2_fponq"]

[node name="Game" type="Node2D"]
script = ExtResource("1_vjs00")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 100

[node name="HUD" parent="UILayer" instance=ExtResource("2_fponq")]

[node name="CloudContainer" type="Node2D" parent="."]
z_index = 50

[node name="BallContainer" type="Node2D" parent="."]

[node name="BulletContainer" type="Node2D" parent="."]

[node name="HommingContainer" type="Node2D" parent="."]

[node name="EffectContainer" type="Node2D" parent="."]

[node name="StatTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="cloud_count_changed" from="UILayer/HUD" to="." method="_on_hud_cloud_count_changed"]
[connection signal="timeout" from="StatTimer" to="." method="_on_stat_timer_timeout"]
